# cpplot2d

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clang_tidy_cpp.cpp  clang_tidy_objc.mm  run_tidy.py
.github/workflows/: cmake-multi-platform.yml
benchmarks/: bench_cpplot2d.cpp
cxpplot/src/: test.cpp
include/: cpplot2d.h  cxpplot.h  refactor.h
pltcpp/src/: Main.cpp  cxpplot.h  pltcpp.h  rnplot32.h  test.cpp
src/: cxpplot.h
tests/: CMakeLists.txt
tests/integration/: plotting_tests.cpp  test_plot.cpp  test_plot.mm  test_shared.hpp
tests/unit/: CMakeLists.txt  test_cpplot2d.cpp  test_plot.cpp
